--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -24,6 +24,10 @@ spring:
           uri: http://localhost:8084
           predicates:
             - Path= /myPages/**
+        - id: purchase
+          uri: http://localhost:8085
+          predicates:
+            - Path= /purchasies/**
       globalcors:
         corsConfigurations:
           '[/**]':
@@ -59,6 +63,10 @@ spring:
           uri: http://mypage:8080
           predicates:
             - Path= /myPages/**
+        - id: purchase
+          uri: http://purchase:8080
+          predicates:
+            - Path= /purchasies/**
       globalcors:
         corsConfigurations:
           '[/**]':
